...
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <!-- Goal -->
                    <TextView
                        android:textAlignment="center"
                        android:id="@+id/textGoal"
                        android:text="0"
                        android:layout_weight="1"
                        android:padding="2dp"
                        android:layout_width="match_parent"
                        android:textColor="@android:color/black"
                        android:layout_height="wrap_content"
...
                        android:textAlignment="center"
                        android:textColor="@android:color/holo_red_dark"
                        android:layout_height="wrap_content"
                        tools:ignore="HardcodedText" />
                    <!-- Food calories -->
                    <TextView
                        android:id="@+id/textFood"
                        android:text="0"
                        android:layout_weight="1"
                        android:padding="2dp"
                        android:textAlignment="center"

                        android:layout_width="match_parent"
...
                        android:padding="2dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:ignore="HardcodedText" />
                    <!-- Total Calories -->
                    <TextView
                        android:id="@+id/textTotal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:padding="2dp"
                        android:text="0"
                        android:textAlignment="center"
...
                    android:textColor="#000"
                    android:text="Goal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="HardcodedText" />
                <Button
                    android:id="@+id/buttonAdd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Add"
                    android:textStyle="bold"
                    android:textColor="#FFFFFF"
                    android:padding="10dp"
                    tools:ignore="HardcodedText" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
...
                    android:text="Breakfast"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="HardcodedText" />

                <Button
                    android:id="@+id/buttonAddItemBreakfast"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="Add Item"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
...
