<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    android:padding="20dp"
    android:background="#FFFFFF"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="250dp"
    android:orientation="vertical">
    <!-- Box for the EditText -->
    <LinearLayout
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <!-- EditText for user input -->
        <EditText
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Goal"
            android:id="@+id/editTextGoal"
            android:autofillHints=""
            tools:ignore="HardcodedText" />
    </LinearLayout>
</RelativeLayout>